# nlp-libs

./: lang-ident.cabal  nlp-libs.cabal  nlp-tools.cabal
src/: Main.hs
src/Data/: NGram.hs
src/Language/Identify/: Cosines.hs  Parse.hs  Types.hs
src/NLP/: Crubadan.hs  Freq.hs  General.hs
