name:                lang-ident
version:             0.0.0.0
synopsis:            A Language Identifier for texts
license:             BSD2
license-file:        LICENSE
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable lang-ident
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       containers >=0.5 && <0.6,
                       text >=1.2 && < 1.3,
                       parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010