name:                nlp-libs
version:             0.0.0.0
synopsis:            Functions and types for NLP activities
license:             BSD2
license-file:        LICENSE
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
category:            Natural Language Processing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     NLP.General, NLP.Freq, NLP.Crubadan
  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6, text >=1.2 && <1.3, parsec >=3.1 && <3.2, charset >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
